@startuml
'https://plantuml.com/sequence-diagram

class App{
    main()
    start()
}
class AppController{
    addToDo()
    removeToDo()
    saveList()
    loadList()
    clearList()
    initialize()

}
class ToDo{
    + String dueDate
    + String description
    + String status
    + setDueDate
    + setDescription
    + setStatus
    + getDueDate
    + getDescription
    + getStatus
    + isValidformat()
}

class csvHandler {
    + readCSV()
    + writeCSV()
    + createFile()
}
App -- AppController
AppController -- csvHandler
AppController - ToDo
@enduml